finish variables. Fix text align

--- a/tu-chirp-frontend/src/index.css
+++ b/tu-chirp-frontend/src/index.css
@@ -106,7 +106,6 @@ button:focus-visible {
 
 p {
   margin: 5px 0; 
-  text-align: center; 
 }
 
 
